force-app/main/default/objects/Account/fields/ABA__c.field-meta.xml
<CustomField>
    <fullName>ABA__c</fullName>
    <label>ABA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>