force-app/main/default/objects/Account/fields/Agente_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Agente_Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agente Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>