force-app/main/default/objects/Account/fields/Alta_Libra__c.field-meta.xml
<CustomField>
    <fullName>Alta_Libra__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alta en Libra</label>
    <type>Checkbox</type>
</CustomField>