force-app/main/default/objects/Account/fields/AnoFundacion__c.field-meta.xml
<CustomField>
    <fullName>AnoFundacion__c</fullName>
    <label>Año de fundación</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>