force-app/main/default/objects/Account/fields/AportacionesComerciales__c.field-meta.xml
<CustomField>
    <fullName>AportacionesComerciales__c</fullName>
    <inlineHelpText>Total commercial contributions created. Commercial contributions (and those from agreements, not included here) are created automatically when a Purchase Order is created</inlineHelpText>
    <label>Aportaciones comerciales</label>
    <summarizedField>Aportacion2__c.Importe__c</summarizedField>
    <summaryFilterItems>
        <field>Aportacion2__c.Tipo__c</field>
        <operation>equals</operation>
        <value>Comercial</value>
    </summaryFilterItems>
    <summaryForeignKey>Aportacion2__c.Cliente__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>