force-app/main/default/objects/Account/fields/AportacionesComercialesDisponibles__c.field-meta.xml
<CustomField>
    <fullName>AportacionesComercialesDisponibles__c</fullName>
    <inlineHelpText>Total available commercial contributions. Commercial contributions (and those from agreements, not included here) are automatically marked as available on the ETD date of the order that originated them</inlineHelpText>
    <label>Aportaciones comerciales disponibles</label>
    <summarizedField>Aportacion2__c.Importe__c</summarizedField>
    <summaryFilterItems>
        <field>Aportacion2__c.Disponible__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Aportacion2__c.Tipo__c</field>
        <operation>equals</operation>
        <value>Comercial</value>
    </summaryFilterItems>
    <summaryForeignKey>Aportacion2__c.Cliente__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>