force-app/main/default/objects/Account/fields/Balance_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Balance_Cuenta__c</fullName>
    <label>Balance Cuenta</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>