force-app/main/default/objects/Account/fields/BancoIntermediario__c.field-meta.xml
<CustomField>
    <fullName>BancoIntermediario__c</fullName>
    <label>Banco intermediario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>