force-app/main/default/objects/Account/fields/BancoReferencia__c.field-meta.xml
<CustomField>
    <fullName>BancoReferencia__c</fullName>
    <label>Banco de Referencia</label>
    <type>TextArea</type>
</CustomField>