force-app/main/default/objects/Account/fields/CE__c.field-meta.xml
<CustomField>
    <fullName>CE__c</fullName>
    <description>Certificates and audits held by the supplier.</description>
    <inlineHelpText>Select all certificates and audits available for this supplier.</inlineHelpText>
    <label>Certificates</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BSCI</fullName>
            </value>
            <value>
                <fullName>SEDEX</fullName>
            </value>
            <value>
                <fullName>SMETA</fullName>
            </value>
            <value>
                <fullName>FSC</fullName>
            </value>
            <value>
                <fullName>ISO 9001</fullName>
            </value>
            <value>
                <fullName>OEKO-TEX</fullName>
            </value>
            <value>
                <fullName>GRS</fullName>
            </value>
            <value>
                <fullName>CE</fullName>
            </value>
            <value>
                <fullName>ETL</fullName>
            </value>
            <value>
                <fullName>RoHS</fullName>
            </value>
            <value>
                <fullName>REACH</fullName>
            </value>
            <value>
                <fullName>Walmart Audit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>