force-app/main/default/objects/Account/fields/Certificates_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Certificates_Expiry_Date__c</fullName>
    <description>Earliest expiry date among the supplier´s certificates</description>
    <inlineHelpText>Enter the nearest expiration date of any certificates or audit</inlineHelpText>
    <label>Certificates Expiry Date</label>
    <type>Date</type>
</CustomField>