force-app/main/default/objects/Account/fields/Clasificaci_n_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Clasificaci_n_Cliente__c</fullName>
    <inlineHelpText>Depending on the customer classification, they will have access to either the general catalog or specific selections</inlineHelpText>
    <label>Clasificación Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A - Clubes de Precio y Departamentales</fullName>
            </value>
            <value>
                <fullName>B - Hipermercados y Tiendas OPP</fullName>
            </value>
            <value>
                <fullName>C - Tiendas Especializadas (A+B)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>