force-app/main/default/objects/Account/fields/Codigo_pais2__c.field-meta.xml
<CustomField>
    <fullName>Codigo_pais2__c</fullName>
    <label>Código de pais</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Codigo_de_pais_ISO</valueSetName>
    </valueSet>
</CustomField>