force-app/main/default/objects/Account/fields/Codigo_rapido__c.field-meta.xml
<CustomField>
    <fullName>Codigo_rapido__c</fullName>
    <description>Id Externo (de la cuenta en el ERP - Libra)</description>
    <inlineHelpText>Id Externo (de la cuenta en el ERP - Libra)</inlineHelpText>
    <label>Código rápido (Libra)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>