force-app/main/default/objects/Account/fields/ComentarioFacturasCliente__c.field-meta.xml
<CustomField>
    <fullName>ComentarioFacturasCliente__c</fullName>
    <label>Comentario facturas cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>