force-app/main/default/objects/Account/fields/Consignee_Linea_3__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Linea_3__c</fullName>
    <label>Consignee Linea 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>