force-app/main/default/objects/Account/fields/Contacto_Comercial2__c.field-meta.xml
<CustomField>
    <fullName>Contacto_Comercial2__c</fullName>
    <label>Contacto Comercial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>