force-app/main/default/objects/Account/fields/Contacto_Documentos__c.field-meta.xml
<CustomField>
    <fullName>Contacto_Documentos__c</fullName>
    <inlineHelpText>Customer contact for the automatic sending of the invoice, PL, and BL upon order shipment</inlineHelpText>
    <label>Contacto Documentos</label>
    <type>Email</type>
</CustomField>