force-app/main/default/objects/Account/fields/Contacto_Gerente_Proveedor__c.field-meta.xml
<CustomField>
    <fullName>Contacto_Gerente_Proveedor__c</fullName>
    <label>Contacto Gerente Proveedor</label>
    <type>TextArea</type>
</CustomField>