force-app/main/default/objects/Account/fields/ContactoBanco__c.field-meta.xml
<CustomField>
    <fullName>ContactoBanco__c</fullName>
    <label>Contacto Banco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>