force-app/main/default/objects/Account/fields/ContactoComercial__c.field-meta.xml
<CustomField>
    <fullName>ContactoComercial__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contacto comercial</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>El contacto no existe o no es un contacto de la cuenta.</errorMessage>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>Contact.Account.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cuentas de las que es contacto comercial</relationshipLabel>
    <relationshipName>CuentasContactoComercial</relationshipName>
    <type>Lookup</type>
</CustomField>