force-app/main/default/objects/Account/fields/ContactoFinanciero__c.field-meta.xml
<CustomField>
    <fullName>ContactoFinanciero__c</fullName>
    <label>Contacto financiero</label>
    <length>255</length>
    <type>Text</type>
</CustomField>