force-app/main/default/objects/Account/fields/Credito_autorizado__c.field-meta.xml
<CustomField>
    <fullName>Credito_autorizado__c</fullName>
    <inlineHelpText>Credit authorized for the customer by the PG CFO</inlineHelpText>
    <label>Crédito autorizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>