force-app/main/default/objects/Account/fields/Credito_Disponible__c.field-meta.xml
<CustomField>
    <fullName>Credito_Disponible__c</fullName>
    <formula>Balance_Cuenta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Crédito disponible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>