force-app/main/default/objects/Account/fields/CuentaCreadaEnQbo__c.field-meta.xml
<CustomField>
    <fullName>CuentaCreadaEnQbo__c</fullName>
    <formula>NOT ( ISBLANK (  IdQbo__c ) )</formula>
    <label>Cuenta creada en QBO</label>
    <type>Checkbox</type>
</CustomField>