force-app/main/default/objects/Account/fields/CuentaIntermediaria__c.field-meta.xml
<CustomField>
    <fullName>CuentaIntermediaria__c</fullName>
    <label>Cuenta intermediaria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>