force-app/main/default/objects/Account/fields/Delivery_Agent_Address_3__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Agent_Address_3__c</fullName>
    <label>Delivery Agent Address 3</label>
    <length>150</length>
    <type>Text</type>
</CustomField>