force-app/main/default/objects/Account/fields/Delivery_Agent_CTC__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Agent_CTC__c</fullName>
    <label>Delivery Agent CTC</label>
    <length>150</length>
    <type>Text</type>
</CustomField>