force-app/main/default/objects/Account/fields/Delivery_Agent_Phone__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Agent_Phone__c</fullName>
    <label>Delivery Agent Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>