force-app/main/default/objects/Account/fields/Direcci_n_de_Beneficiario__c.field-meta.xml
<CustomField>
    <fullName>Direcci_n_de_Beneficiario__c</fullName>
    <label>Dirección del beneficiario</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>