force-app/main/default/objects/Account/fields/Direccion_de_fabrica_en_chino__c.field-meta.xml
<CustomField>
    <fullName>Direccion_de_fabrica_en_chino__c</fullName>
    <label>Dirección de fábrica en chino</label>
    <length>255</length>
    <type>Text</type>
</CustomField>