force-app/main/default/objects/Account/fields/DireccionBanco__c.field-meta.xml
<CustomField>
    <fullName>DireccionBanco__c</fullName>
    <label>Dirección banco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>