force-app/main/default/objects/Account/fields/DireccionBancoIntermediario__c.field-meta.xml
<CustomField>
    <fullName>DireccionBancoIntermediario__c</fullName>
    <label>Dirección banco intermediario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>