force-app/main/default/objects/Account/fields/DireccionFacturacionChino__c.field-meta.xml
<CustomField>
    <fullName>DireccionFacturacionChino__c</fullName>
    <label>Dirección de facturación en chino</label>
    <length>255</length>
    <type>Text</type>
</CustomField>