force-app/main/default/objects/Account/fields/Email_financiero__c.field-meta.xml
<CustomField>
    <fullName>Email_financiero__c</fullName>
    <description>Casilla de correo electrónico del contacto financiero de la cuenta</description>
    <inlineHelpText>Email address of the account&apos;s financial contact</inlineHelpText>
    <label>Email financiero</label>
    <type>Email</type>
</CustomField>