force-app/main/default/objects/Account/fields/Email_Gerente_Proveedor__c.field-meta.xml
<CustomField>
    <fullName>Email_Gerente_Proveedor__c</fullName>
    <label>Email Gerente Proveedor</label>
    <type>Email</type>
</CustomField>