force-app/main/default/objects/Account/fields/EmailBanco__c.field-meta.xml
<CustomField>
    <fullName>EmailBanco__c</fullName>
    <label>Email Banco</label>
    <type>Email</type>
</CustomField>