force-app/main/default/objects/Account/fields/EmailComercial__c.field-meta.xml
<CustomField>
    <fullName>EmailComercial__c</fullName>
    <label>Email comercial</label>
    <type>Email</type>
</CustomField>