force-app/main/default/objects/Account/fields/Enlace_al_Catalogo__c.field-meta.xml
<CustomField>
    <fullName>Enlace_al_Catalogo__c</fullName>
    <formula>IF( RecordType.DeveloperName = &apos;ClienteContacto&apos;,
IF( Portal_Token__c != null,
HYPERLINK(&apos;https://pacificglobal.my.salesforce-sites.com/portal/CatalogueIndex?dbrToken=&apos; + Portal_Token__c, &apos;Catálogo web&apos;),
&apos;No se ha generado un catalogo o ha caducado&apos;),
&apos;N/A&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enlace al Catálogo</label>
    <type>Text</type>
</CustomField>