force-app/main/default/objects/Account/fields/Env_o_de_documentos__c.field-meta.xml
<CustomField>
    <fullName>Env_o_de_documentos__c</fullName>
    <inlineHelpText>By selecting YES, the system will automatically send the Invoice, PL &amp; BL documents to the indicated contact when an order is shipped</inlineHelpText>
    <label>Envío de documentos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NO</fullName>
                <default>true</default>
                <label>NO</label>
            </value>
            <value>
                <fullName>SI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>