force-app/main/default/objects/Account/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospecto</fullName>
                <default>true</default>
                <label>Prospecto</label>
            </value>
            <value>
                <fullName>Activo</fullName>
            </value>
            <value>
                <fullName>Ex-cliente</fullName>
                <label>Ex-Cliente</label>
            </value>
            <value>
                <fullName>Ex-Comprador</fullName>
            </value>
            <value>
                <fullName>Ex-proveedor</fullName>
                <label>Ex-Proveedor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>