force-app/main/default/objects/Account/fields/Extension_Financiero__c.field-meta.xml
<CustomField>
    <fullName>Extension_Financiero__c</fullName>
    <label>Extensión Financiero</label>
    <length>4</length>
    <type>Text</type>
</CustomField>