force-app/main/default/objects/Account/fields/FechaAltaCliente__c.field-meta.xml
<CustomField>
    <fullName>FechaAltaCliente__c</fullName>
    <label>Fecha alta cliente</label>
    <type>Date</type>
</CustomField>