force-app/main/default/objects/Account/fields/FechaAltaProveedor__c.field-meta.xml
<CustomField>
    <fullName>FechaAltaProveedor__c</fullName>
    <label>Fecha alta proveedor</label>
    <type>Date</type>
</CustomField>