force-app/main/default/objects/Account/fields/FormaPago__c.field-meta.xml
<CustomField>
    <fullName>FormaPago__c</fullName>
    <label>Forma de pago</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>T/T</fullName>
            </value>
            <value>
                <fullName>L/C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>