force-app/main/default/objects/Account/fields/Formato_de_Confirmacion__c.field-meta.xml
<CustomField>
    <fullName>Formato_de_Confirmacion__c</fullName>
    <label>Formato de Confirmación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CONTRATO</fullName>
            </value>
            <value>
                <fullName>ORDEN COMPRA</fullName>
            </value>
            <value>
                <fullName>PROFORMA</fullName>
                <label>PROFORMA PG</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>