force-app/main/default/objects/Account/fields/Geolocalizaci_n__c.field-meta.xml
<CustomField>
    <fullName>Geolocalizaci_n__c</fullName>
    <label>Geolocalización</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>