force-app/main/default/objects/Account/fields/Initial_Notes__c.field-meta.xml
<CustomField>
    <fullName>Initial_Notes__c</fullName>
    <label>Initial Notes</label>
    <type>TextArea</type>
</CustomField>