force-app/main/default/objects/Account/fields/Last_Factory_Visit__c.field-meta.xml
<CustomField>
    <fullName>Last_Factory_Visit__c</fullName>
    <description>Date of the most recent factory visit.</description>
    <inlineHelpText>Enter the date when the factory was last visited by Pacific Global.</inlineHelpText>
    <label>Last Factory Visit</label>
    <type>DateTime</type>
</CustomField>