force-app/main/default/objects/Account/fields/LimiteCreditoAsegurado__c.field-meta.xml
<CustomField>
    <fullName>LimiteCreditoAsegurado__c</fullName>
    <label>Limite de crédito asegurado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>