force-app/main/default/objects/Account/fields/MetodoPagoAportaciones__c.field-meta.xml
<CustomField>
    <fullName>MetodoPagoAportaciones__c</fullName>
    <inlineHelpText>Commercial contributions payment method agreed upon with the customer</inlineHelpText>
    <label>Método pago aportaciones</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MetodoPagoAportaciones</valueSetName>
    </valueSet>
</CustomField>