force-app/main/default/objects/Account/fields/MetodoPagoConvenio__c.field-meta.xml
<CustomField>
    <fullName>MetodoPagoConvenio__c</fullName>
    <inlineHelpText>Framework agreement payment method agreed upon with the customer</inlineHelpText>
    <label>Método pago convenio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MetodoPagoConvenio</valueSetName>
    </valueSet>
</CustomField>