force-app/main/default/objects/Account/fields/Movil__c.field-meta.xml
<CustomField>
    <fullName>Movil__c</fullName>
    <description>Para las cuentas de tipo Contacto/Cliente</description>
    <inlineHelpText>For Contact/Customer type accounts</inlineHelpText>
    <label>Móvil</label>
    <type>Phone</type>
</CustomField>