force-app/main/default/objects/Account/fields/Nombre_Cuenta_Padre__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Cuenta_Padre__c</fullName>
    <formula>Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Cuenta Padre</label>
    <type>Text</type>
</CustomField>