force-app/main/default/objects/Account/fields/NombreBanco__c.field-meta.xml
<CustomField>
    <fullName>NombreBanco__c</fullName>
    <label>Nombre banco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>