force-app/main/default/objects/Account/fields/Notify_Party_Linea_1__c.field-meta.xml
<CustomField>
    <fullName>Notify_Party_Linea_1__c</fullName>
    <label>Notify Party Linea 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>