force-app/main/default/objects/Account/fields/NroIdFiscal__c.field-meta.xml
<CustomField>
    <fullName>NroIdFiscal__c</fullName>
    <label>Nº ID Fiscal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>