force-app/main/default/objects/Account/fields/NroTiendasAprox__c.field-meta.xml
<CustomField>
    <fullName>NroTiendasAprox__c</fullName>
    <label>Numero de Tiendas Aproximadas</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>