force-app/main/default/objects/Account/fields/Numero_proveedor_PG__c.field-meta.xml
<CustomField>
    <fullName>Numero_proveedor_PG__c</fullName>
    <inlineHelpText>Supplier number we have with this customer</inlineHelpText>
    <label>Numero proveedor PG</label>
    <type>TextArea</type>
</CustomField>