force-app/main/default/objects/Account/fields/NumeroCuenta__c.field-meta.xml
<CustomField>
    <fullName>NumeroCuenta__c</fullName>
    <label>Número de cuenta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>