force-app/main/default/objects/Account/fields/PlanificacionesComercialesActivas__c.field-meta.xml
<CustomField>
    <fullName>PlanificacionesComercialesActivas__c</fullName>
    <label>Planificaciones comerciales activas</label>
    <summaryFilterItems>
        <field>PlanificacionComercial__c.Activa__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>PlanificacionComercial__c.Cuenta__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>