force-app/main/default/objects/Account/fields/Plazo_pago_int__c.field-meta.xml
<CustomField>
    <fullName>Plazo_pago_int__c</fullName>
    <formula>CASE(PlazoPago__c,
     &quot;0&quot;, 0,
     &quot;7&quot;, 7,
     &quot;15&quot;, 15,
     &quot;30&quot;, 30,
     &quot;45&quot;, 45,
     &quot;60&quot;, 60,
     &quot;90&quot;,90,
     &quot;120&quot;, 120,
     &quot;150&quot;, 150,
     &quot;180&quot;, 180,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plazo pago int</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>