force-app/main/default/objects/Account/fields/Plazo_Precios_Proveedor__c.field-meta.xml
<CustomField>
    <fullName>Plazo_Precios_Proveedor__c</fullName>
    <label>Plazo vigencia precios proveedor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
            <value>
                <fullName>180</fullName>
            </value>
            <value>
                <fullName>240</fullName>
            </value>
            <value>
                <fullName>300</fullName>
            </value>
            <value>
                <fullName>360</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>