force-app/main/default/objects/Account/fields/PorcentajeAportaciones__c.field-meta.xml
<CustomField>
    <fullName>PorcentajeAportaciones__c</fullName>
    <inlineHelpText>% of commercial contributions signed by the Customer</inlineHelpText>
    <label>% Aportaciones</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>