force-app/main/default/objects/Account/fields/PorcentajeConvenio__c.field-meta.xml
<CustomField>
    <fullName>PorcentajeConvenio__c</fullName>
    <inlineHelpText>% of commercial agreement signed by the Customer</inlineHelpText>
    <label>% Convenio</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>