force-app/main/default/objects/Account/fields/Portal_Token__c.field-meta.xml
<CustomField>
    <fullName>Portal_Token__c</fullName>
    <description>Token generado que es necesario para acceder al portal</description>
    <label>Portal Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>