force-app/main/default/objects/Account/fields/Portal_Token_Verificacion__c.field-meta.xml
<CustomField>
    <fullName>Portal_Token_Verificacion__c</fullName>
    <description>Token para verificacion de costos</description>
    <label>Portal Token Verificacion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>